force-app/main/default/objects/Profiel_ziekenhuis__c/Profiel_ziekenhuis__c.object-meta.xml
<CustomObject>
    <description>Not in use, no data</description>
    <label>EU-Profiel ziekenhuis</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Profielnaam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profielen ziekenhuizen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>