force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Aantal_heup_primair_cup_gecementeerd__c.field-meta.xml
<CustomField>
    <fullName>Aantal_heup_primair_cup_gecementeerd__c</fullName>
    <description>Geef aan hoeveel primaire, gecementeerde heup cups in dit ziekenhuis op jaarbasis worden geïmplanteerd.</description>
    <inlineHelpText>Geef aan hoeveel primaire, gecementeerde heup cups in dit ziekenhuis op jaarbasis worden geïmplanteerd.</inlineHelpText>
    <label>Aantal heup primair cup gecementeerd</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>