force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Aantal_heup_resurfacing__c.field-meta.xml
<CustomField>
    <fullName>Aantal_heup_resurfacing__c</fullName>
    <description>Geef aan hoeveel heup resurfacing operaties in dit ziekenhuis op jaarbasis worden uitgevoerd.</description>
    <inlineHelpText>Geef aan hoeveel heup resurfacing operaties in dit ziekenhuis op jaarbasis worden uitgevoerd.</inlineHelpText>
    <label>Aantal heup resurfacing</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>