force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Aantal_knie_Patella_Femoraal__c.field-meta.xml
<CustomField>
    <fullName>Aantal_knie_Patella_Femoraal__c</fullName>
    <description>Geef aan hoeveel knieën Patella Femoraal dit ziekenhuis op jaarbasis uitvoert.</description>
    <label>Aantal knie Patella Femoraal</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>