force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Aantal_knie_primair_ongecementeerd__c.field-meta.xml
<CustomField>
    <fullName>Aantal_knie_primair_ongecementeerd__c</fullName>
    <description>Dit ziekenhuis doet op jaarbasis dit aantal primaire, ongecementeerde knieën.</description>
    <label>Aantal knie primair ongecementeerd</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>