force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Aantal_knie_uni_condylair__c.field-meta.xml
<CustomField>
    <fullName>Aantal_knie_uni_condylair__c</fullName>
    <description>Geef aan hoeveel knieën uni-condylair dit ziekenhuis op jaarbasis uitvoert.</description>
    <label>Aantal knie uni-condylair</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>