force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Aantal_schouder_reverse__c.field-meta.xml
<CustomField>
    <fullName>Aantal_schouder_reverse__c</fullName>
    <description>Geef aan hoeveel schouder reverse operaties op jaarbasis in het ziekenhuis worden uitgevoerd.</description>
    <inlineHelpText>Geef aan hoeveel schouder reverse operaties op jaarbasis in het ziekenhuis worden uitgevoerd.</inlineHelpText>
    <label>Aantal schouder reverse</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>