force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Budget_heup_MIS_operatie__c.field-meta.xml
<CustomField>
    <fullName>Budget_heup_MIS_operatie__c</fullName>
    <formula>Aantal_heup_MIS_operaties__c *1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget heup MIS operatie</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>