force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Budget_heup_primair_steel_gecementeerd__c.field-meta.xml
<CustomField>
    <fullName>Budget_heup_primair_steel_gecementeerd__c</fullName>
    <formula>Aantal_heup_primair_steel_gecementeerd__c *1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget heup primair steel gecementeerd</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>