force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Budget_knie_Patella_Femoraal__c.field-meta.xml
<CustomField>
    <fullName>Budget_knie_Patella_Femoraal__c</fullName>
    <formula>Aantal_knie_Patella_Femoraal__c  *  Gemid_prijs_knie_Patella_Femoraal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget knie Patella Femoraal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>