force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Budget_knie_primair_gecementeerd__c.field-meta.xml
<CustomField>
    <fullName>Budget_knie_primair_gecementeerd__c</fullName>
    <description>Dit is het budget van het ziekenhuis voor primaire knieën. Gecementeerd en ongecementeerd bij elkaar opgeteld.</description>
    <formula>Aantal_knie_primair_gecementeerd__c  * Gemid_prijs_knie_primair_gecementeerd__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget knie primair gecementeerd</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>