force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Budget_knie_primair_ongecementeerd__c.field-meta.xml
<CustomField>
    <fullName>Budget_knie_primair_ongecementeerd__c</fullName>
    <formula>Aantal_knie_primair_ongecementeerd__c  *  Gemid_prijs_knie_primair_ongecementeerd__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget knie primair ongecementeerd</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>