force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Budget_knie_revisie__c.field-meta.xml
<CustomField>
    <fullName>Budget_knie_revisie__c</fullName>
    <formula>Aantal_knie_revisie__c  *  Gemid_prijs_knie_revisie__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget knie revisie</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>