force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Budget_knie_Uni_Condylair__c.field-meta.xml
<CustomField>
    <fullName>Budget_knie_Uni_Condylair__c</fullName>
    <formula>Aantal_knie_uni_condylair__c  *  Gemid_prijs_knie_uni_condylair__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget knie Uni-Condylair</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>