force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Budget_schouder_cuff__c.field-meta.xml
<CustomField>
    <fullName>Budget_schouder_cuff__c</fullName>
    <formula>Aantal_schouder_cuff__c *1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget schouder cuff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>