force-app/main/default/objects/Profiel_ziekenhuis__c/fields/External_Profiel_Ziekenhuis_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Profiel_Ziekenhuis_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External_Profiel_Ziekenhuis_ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>