force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Gemid_prijs_knie_Patella_Femoraal__c.field-meta.xml
<CustomField>
    <fullName>Gemid_prijs_knie_Patella_Femoraal__c</fullName>
    <defaultValue>1250</defaultValue>
    <description>Dit is de gemiddelde prijs voor een knie Patella Fomoraal</description>
    <label>Gemid prijs knie Patella Femoraal</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>