force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Gemid_prijs_knie_primair_ongecementeerd__c.field-meta.xml
<CustomField>
    <fullName>Gemid_prijs_knie_primair_ongecementeerd__c</fullName>
    <defaultValue>1250</defaultValue>
    <description>Dit is de gemiddelde prijs voor een ongecementeerde, primaire knie.</description>
    <label>Gemid prijs knie primair ongecementeerd</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>