force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Gemid_prijs_knie_revisie__c.field-meta.xml
<CustomField>
    <fullName>Gemid_prijs_knie_revisie__c</fullName>
    <defaultValue>1250</defaultValue>
    <description>Dit is de gemiddelde prijs van een revisie knie.</description>
    <label>Gemid prijs knie revisie</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>