force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Gemid_prijs_knie_uni_condylair__c.field-meta.xml
<CustomField>
    <fullName>Gemid_prijs_knie_uni_condylair__c</fullName>
    <defaultValue>1250</defaultValue>
    <description>Dit is de gemiddelde prijs voor een knie uni-condylair</description>
    <label>Gemid prijs knie uni-condylair</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>