force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Heup_tribologie__c.field-meta.xml
<CustomField>
    <fullName>Heup_tribologie__c</fullName>
    <description>Geef aan welke filosofie voor de heup kop en cup wordt gebruikt in het ziekenhuis. Er zijn meerdere opties mogelijk.</description>
    <inlineHelpText>Geef aan welke filosofie voor de heup kop en cup wordt gebruikt in het ziekenhuis. Er zijn meerdere opties mogelijk.</inlineHelpText>
    <label>Heup tribologie</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Metal - Metal</fullName>
            </value>
            <value>
                <fullName>Ceramic - Ceramic</fullName>
            </value>
            <value>
                <fullName>HXPE - Ceramic</fullName>
            </value>
            <value>
                <fullName>HXPE - Metal</fullName>
            </value>
            <value>
                <fullName>PE - Ceramic</fullName>
            </value>
            <value>
                <fullName>PE - Metal</fullName>
            </value>
            <value>
                <fullName>HXLPE -Ceramic</fullName>
            </value>
            <value>
                <fullName>HXLPE - Metal</fullName>
            </value>
            <value>
                <fullName>E-Poly - Ceramic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>