force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Merk_heup_MIS_steel__c.field-meta.xml
<CustomField>
    <fullName>Merk_heup_MIS_steel__c</fullName>
    <description>Kies de fabrikant van de MIS heup steel.</description>
    <inlineHelpText>Kies de fabrikant van de MIS heup steel.</inlineHelpText>
    <label>Merk heup MIS steel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Zimmer</fullName>
            </value>
            <value>
                <fullName>EndoCare</fullName>
            </value>
            <value>
                <fullName>Finsbury</fullName>
            </value>
            <value>
                <fullName>Johnson &amp; Johnson</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
            </value>
            <value>
                <fullName>Smith Nephew</fullName>
            </value>
            <value>
                <fullName>Stryker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>