force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Merk_heup_primair_cup_gecementeerd__c.field-meta.xml
<CustomField>
    <fullName>Merk_heup_primair_cup_gecementeerd__c</fullName>
    <description>Kies de fabrikant van de primaire, gecementeerde heup cup.</description>
    <inlineHelpText>Kies de fabrikant van de primaire, gecementeerde heup cup.</inlineHelpText>
    <label>Merk heup primair cup gecementeerd</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Zimmer</fullName>
            </value>
            <value>
                <fullName>Biomet</fullName>
            </value>
            <value>
                <fullName>EndoCare</fullName>
            </value>
            <value>
                <fullName>Johnson &amp; Johnson</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
            </value>
            <value>
                <fullName>Mathys</fullName>
            </value>
            <value>
                <fullName>Stryker</fullName>
            </value>
            <value>
                <fullName>Smit Nephew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>