force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Merk_heup_resurfacing__c.field-meta.xml
<CustomField>
    <fullName>Merk_heup_resurfacing__c</fullName>
    <description>Kies de fabrikant van de resurfacing heup.</description>
    <inlineHelpText>Kies de fabrikant van de resurfacing heup.</inlineHelpText>
    <label>Merk heup resurfacing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Zimmer</fullName>
            </value>
            <value>
                <fullName>Biomet</fullName>
            </value>
            <value>
                <fullName>Endo Care</fullName>
            </value>
            <value>
                <fullName>Finsbury</fullName>
            </value>
            <value>
                <fullName>Johnson &amp; Johnson</fullName>
            </value>
            <value>
                <fullName>Smith Nephew</fullName>
            </value>
            <value>
                <fullName>Oudshoorn</fullName>
            </value>
            <value>
                <fullName>Stryker</fullName>
            </value>
            <value>
                <fullName>Wright</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>