force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Merk_heup_revisie_steel_gecementeerd__c.field-meta.xml
<CustomField>
    <fullName>Merk_heup_revisie_steel_gecementeerd__c</fullName>
    <description>Kies de fabrikant van de gecementeerde revisie heup steel.</description>
    <inlineHelpText>Kies de fabrikant van de gecementeerde revisie heup steel.</inlineHelpText>
    <label>Merk heup revisie steel gecementeerd</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Zimmer</fullName>
            </value>
            <value>
                <fullName>Biomet</fullName>
            </value>
            <value>
                <fullName>Smith Nephew</fullName>
            </value>
            <value>
                <fullName>Stryker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>